2008-03-28 Jesse Kornblum <md5deep@jessekornblum.com>

	* Noted WSTRING_EQUAL macro is case insensitive in a spot
	  where we need it to be case sensitive.
	

2008-03-20 Jesse Kornblum <md5deep@jessekornblum.com>

	* Added ability for hashdeep to detect and ignore badly
	  formatted lines in files of known hashes.


2008-03-19 Jesse Kornblum <md5deep@jessekornblum.com>

	* Added phrase "and compare" to manpage description of 
	  the programs. This will hopefully reinforce the idea
	  that md5deep cannot be replaced with one line of shell.
	
	
2008-03-18 Jesse Kornblum <md5deep@jessekornblum.com>

	* Added doc directory to hold FAQ and other web pages


2008-03-16 Jesse Kornblum <md5deep@jessekornblum.com>

	* Added missing space to hash collision message in audit.c

	* Changed default behavior to always print hash collisions

	
2008-03-13 Jesse Kornblum <md5deep@jessekornblum.com>

	* Updated make world directive to make Windows package

	* Updated COPYING to note more than one file under GPL
	
        * Changed md5deep Makefile to explicitly name man
          man pages in copy operation.

	* Moved prototypes for process_normal and process_win32
	  to include/common.h to avoid compiler warnings and
	  repitions. 

	* Cleaned up audit code slightly

	* Fixed display banner to treat current working directory
	  as a Unicode string.

	* Enabled and allowed the user load known files that have
	  different kinds of hashes in them.

	* Version bump to 3.0. I've made so many changes to the
	  common code that it warrants the jump.
	
	
2008-03-12 Jesse Kornblum <md5deep@jessekornblum.com>
	
	* Added strsep (and appropriate autoconf/automake checks)
	  in place to ugly homebrew code to separate out string 
	  values. This is for one instance in match.c, need to update
	  the others.

	* While reading files on known hashes, convert filenames
	  to Unicode before storing.

	* Changed NEWLINE on Win32 to be just "\n" instead of "\r\n"